# clovece

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: Assets.aseprite
client/: Client.cpp  Client.h
common/: SColor.h  messages.h  utils.cpp  utils.h
game/: Action.cpp  Action.h  Arrow.cpp  Arrow.h  Board.cpp  Board.h  Color.h  Dice.cpp  Dice.h  Dot.cpp  Dot.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Path.cpp  Path.h  Piece.cpp  Piece.h  PieceState.h  Player.cpp  Player.h  Tile.cpp  Tile.h  Turn.cpp  Turn.h  TurnState.h
server/: Action.cpp  Action.h  Arrow.cpp  Arrow.h  Board.cpp  Board.h  Color.h  Dice.cpp  Dice.h  Direction.h  Dot.cpp  Dot.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Path.cpp  Path.h  Piece.cpp  Piece.h  PieceState.h  Player.cpp  Player.h  SColor.h  Tile.cpp  Tile.h  Turn.cpp  Turn.h
server/entities/: Action.cpp  Arrow.cpp  Arrow.h  Dice.cpp  Dice.h  Dot.cpp  Dot.h  Entity.cpp  Entity.h  Piece.cpp  Piece.h  Tile.cpp  Tile.h
